wasapi: Don't pass CoTaskMemFree to g_clear_pointer

CoTaskMemFree has a different calling convention than GDestroyNotify
and things crash at least with MinGW.

https://bugzilla.gnome.org/show_bug.cgi?id=796280